==> ARMmbed/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52840/USBPhy_Nordic.cpp <==
#include "USBPhyHw.h"
#include "platform/mbed_critical.h"
#include "platform/mbed_assert.h"
#define MAX_PACKET_SIZE_SETUP NRF_DRV_USBD_EPSIZE
#define MAX_PACKET_NON_ISO    NRF_DRV_USBD_EPSIZE
#define MAX_PACKET_ISO        NRF_DRV_USBD_ISOSIZE
#define ENDPOINT_NON_ISO      (USB_EP_ATTR_ALLOW_BULK | USB_EP_ATTR_ALLOW_INT)
#define IS_IN_EP(ep)    (ep & 0x80)  // Checks if the given endpoint is an IN endpoint (MSB set)
#define IS_OUT_EP(ep)   (ep & ~0x80) // Checks if the given endpoint is an OUT endpoint (MSB clear)
#define SETUP_TRANSFER_DIR_MASK 0x80
#define USBD_DEBUG 0

void USBPhyHw::init(USBPhyEvents *events)
{

    // Disable the USBD interrupts
    // Interrupts will be reenabled by the Nordic driver
    NRFX_IRQ_DISABLE(USBD_IRQn);

    if (this->events == NULL) {
        sleep_manager_lock_deep_sleep();
    }

    this->events = events;

    ret_code_t ret;

    // Initialize power module to track USB Power events
    ret = nrfx_power_init(NULL);
    MBED_ASSERT(ret == NRF_SUCCESS);


    // Register callback for USB Power events
    static const nrfx_power_usbevt_config_t config = {
        .handler = power_usb_event_handler
    };

    nrfx_power_usbevt_init(&config);

    // Initialize USB Device driver
    ret = nrf_drv_usbd_init(usbd_event_handler);
    MBED_ASSERT(ret == NRF_SUCCESS);

    /* Configure selected size of the packed on EP0 */
    nrf_drv_usbd_ep_max_packet_size_set(NRF_DRV_USBD_EPOUT0, MAX_PACKET_SIZE_SETUP);
    nrf_drv_usbd_ep_max_packet_size_set(NRF_DRV_USBD_EPIN0, MAX_PACKET_SIZE_SETUP);

    // Store a reference to this instance
    instance = this;

    virtual_status_xfer_event = false;

    /*
     * Configure ISOIN endpoint to respond with ZLP when
     * no data is ready to be sent
     */
    NRF_USBD->ISOINCONFIG |= 0x01; // set RESPONSE to 1 (respond with ZLP)

    // Set up the IRQ handler
    NVIC_SetVector(USBD_IRQn, (uint32_t)USBD_HAL_IRQHandler);

    // Enable the power events
    nrfx_power_usbevt_enable();

}

void USBPhyHw::connect()
{

    // To save power, we only enable the USBD peripheral
    // when there's actually VBUS detected

    // So flag that the USB stack is ready to connect
    this->connect_enabled = true;

    // If VBUS is already available, enable immediately
    if (nrfx_power_usbstatus_get() == NRFX_POWER_USB_STATE_CONNECTED) {
        // Enabling USB will cause NRF_DRV_POWER_USB_EVT_READY
        // to occur, which will start the USBD peripheral
        // when the internal regulator has settled
        if (!nrf_drv_usbd_is_enabled()) {
            nrf_drv_usbd_enable();
        }

        if (nrfx_power_usbstatus_get() == NRFX_POWER_USB_STATE_READY
                && !nrf_drv_usbd_is_started()) {
            nrf_drv_usbd_start(true);
        }
    }
}

const usb_ep_table_t *USBPhyHw::endpoint_table()
{

    static const usb_ep_table_t template_table = {
        1536, // 64 bytes per bulk/int endpoint pair (8), 1023 bytes for iso endpoint pair (1)
        {
            { USB_EP_ATTR_ALLOW_CTRL    | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { ENDPOINT_NON_ISO          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { ENDPOINT_NON_ISO          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { ENDPOINT_NON_ISO          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { ENDPOINT_NON_ISO          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { ENDPOINT_NON_ISO          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { ENDPOINT_NON_ISO          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { ENDPOINT_NON_ISO          | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { USB_EP_ATTR_ALLOW_ISO     | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { 0                         | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { 0                         | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { 0                         | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { 0                         | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { 0                         | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { 0                         | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
            { 0                         | USB_EP_ATTR_DIR_IN_AND_OUT, 0, 0 },
        }
    };
    return &template_table;
}

void USBPhyHw::process()
{

    if (usb_event_type == USB_HW_EVENT_USBD) {

        // Process regular USBD events
        switch (usb_event.type) {
            case NRF_DRV_USBD_EVT_SUSPEND:
                events->suspend(true);
                break;
            case NRF_DRV_USBD_EVT_RESUME:
                events->suspend(false);
                break;
            case NRF_DRV_USBD_EVT_WUREQ:
                break;
            case NRF_DRV_USBD_EVT_RESET:
                this->_reset();
                events->reset();
                break;
            case NRF_DRV_USBD_EVT_SOF:
                if (sof_enabled) {
                    events->sof(usb_event.data.sof.framecnt);
                }
                break;
            case NRF_DRV_USBD_EVT_EPTRANSFER:
                if (usb_event.data.eptransfer.status == NRF_USBD_EP_OK) {
                    if (!nrf_drv_usbd_ep_stall_check(usb_event.data.eptransfer.ep)) {
                        if (IS_IN_EP(usb_event.data.eptransfer.ep)) {
                            if ((usb_event.data.eptransfer.ep & 0x7F) == 0) {
                                events->ep0_in();
                            } else {
                                events->in((usb_ep_t) usb_event.data.eptransfer.ep);
                            }
                        } else {
                            if ((usb_event.data.eptransfer.ep & 0x7F) == 0) {
                                events->ep0_out();
                            } else {
                                events->out((usb_ep_t) usb_event.data.eptransfer.ep);
                            }
                        }
                    }
                }
                break;
            case NRF_DRV_USBD_EVT_SETUP: {
                nrf_drv_usbd_ep_stall_clear(NRF_DRV_USBD_EPIN0);
                nrf_drv_usbd_ep_stall_clear(NRF_DRV_USBD_EPOUT0);

                // Copy the setup packet into the internal buffer
                nrf_drv_usbd_setup_get(&setup_buf);

                // Notify the Mbed stack
                events->ep0_setup();
            }
            break;
            default:
                break;

        }
    } else if (usb_event_type == USB_HW_EVENT_POWER) {
        // Process USB power-related events
        switch (usb_power_event) {
            case NRFX_POWER_USB_EVT_DETECTED:
                if (this->connect_enabled) {
                    if (!nrf_drv_usbd_is_enabled()) {
                        nrf_drv_usbd_enable();
                    }
                    events->power(true);
                }
                break;
            case NRFX_POWER_USB_EVT_REMOVED:
                events->power(false);
                break;
            case NRFX_POWER_USB_EVT_READY:
                if (!nrf_drv_usbd_is_started()) {
                    nrf_drv_usbd_start(true);
                }
                break;
            default:
                ASSERT(false);
        }
    } else if (usb_event_type == USB_HW_EVENT_VIRTUAL_STATUS) {
        // Notify Mbed stack of status stage transfer completion
        if (setup_buf.bmRequestType & SETUP_TRANSFER_DIR_MASK) { // DATA IN transfer, Status OUT transfer
            events->ep0_out();
        } else {                                                 // DATA OUT transfer, Status IN transfer
            events->ep0_in();
        }
    }

    // Unflag the event type
    usb_event_type = USB_HW_EVENT_NONE;

    // Re-enable interrupt
    enable_usb_interrupts();
}
